--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-translate-api": "^2.3.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "node-cmd": "^3.0.0",
     "pug": "2.0.0-beta11",
     "readline": "^1.3.0",
     "request": "^2.88.2"
