--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "news-japan",
+  "name": "backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www ",
-    "serverstart": "DEBUG=news-japan:*npm run devstart "
+    "serverstart": "DEBUG=backend:*npm run devstart "
   },
   "dependencies": {
     "@vitalets/google-translate-api": "^3.0.0",
+    "array-flatten": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
